<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_name">QUIZMAKER</string>
    <string name="main_menu_start_button">START LEARNING</string>
    <string name="main_menu_set_manager_button">MANAGE QUESTIONS</string>
    <string name="settings">Settings</string>
    <string name="nav_question_sets">Question Sets</string>
    <string name="nav_settings">Settings</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="category_name_dummy">CATEGORY NAME</string>
    <string name="question_set_name_dummy">QUESTION SET NAME</string>
    <string name="fab_add">ADD</string>
    <string name="new_question_set_name">NEW QUESTION SET NAME</string>
    <string name="create_new_question_set">CREATE NEW QUESTION SET</string>
    <string name="submit">ADD</string>
    <string name="edit_question_set">EDIT QUESTION SET</string>
    <string name="edit">SAVE</string>
    <string name="edit_name">EDIT NAME</string>
    <string name="name">NAME</string>
    <string name="delete">Delete</string>
    <string name="create_new_category">CREATE NEW CATEGORY</string>
    <string name="edit_category">EDIT CATEGORY</string>
    <string name="question_name_dummy">QUESTION</string>
    <string name="answer_name_dummy">ANSWER</string>
    <string name="create_new_question">CREATE NEW QUESTION</string>
    <string name="question_name">QUESTION</string>
    <string name="answer_name">ANSWER</string>
    <string name="edit_question">EDIT QUESTION</string>
    <string name="quiz_simple_too_few_question">TOO FEW QUESTIONS\n IN THIS SET/CATEGORY\n\n ADD AT LEAST 5 QUESTIONS</string>
    <string name="you_got_x_points">You got X points!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="go_back">Return</string>
    <string name="set_training_alarm">SET TRAINING ALARM</string>
    <string name="set_time">set time</string>
    <string name="disable">disable</string>
    <string name="start">START</string>
    <string name="check">CHECK</string>
    <string name="cancel">Cancel</string>
    <string name="play">PLAY</string>
    <string name="help">Help</string>
</resources>