<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.EditQuestionAndAnswerFragment">

    <TextView
        android:id="@+id/editQuestionAndAnswerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:textColor="@color/new_on_background"
        android:text="@string/edit_question"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/editQuestionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"
        android:background="@color/new_primary"
        android:textColor="@color/new_on_primary"
        android:textSize="25sp"
        android:textAlignment="center"
        android:hint="@string/question_name"
        android:autofillHints="@string/edit_name"
        app:layout_constraintTop_toBottomOf="@id/editQuestionAndAnswerTextView"
        android:inputType="text" />

    <EditText
        android:id="@+id/editAnswerEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"
        android:background="@color/new_primary"
        android:textColor="@color/new_on_primary"
        android:textSize="25sp"
        android:textAlignment="center"
        android:hint="@string/answer_name"
        android:autofillHints="@string/edit_name"
        app:layout_constraintTop_toBottomOf="@id/editQuestionEditText"
        android:inputType="text" />

    <Button
        android:id="@+id/editQuestionAndAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/edit"
        android:textColor="@color/new_on_primary"
        app:layout_constraintTop_toBottomOf="@id/editAnswerEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>