<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/new_primary_variant">

    <TextView
        android:id="@+id/dialogAddQuestionSetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textColor="@color/new_on_background"
        android:text="@string/create_new_question_set"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/dialogAddQuestionSetEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"
        android:background="@color/new_primary"
        android:textSize="16sp"
        android:textColor="@color/new_on_background"
        android:textAlignment="center"
        android:hint="@string/name"
        android:autofillHints="@string/edit_name"
        android:textColorHint="@color/new_on_primary"
        app:layout_constraintTop_toBottomOf="@id/dialogAddQuestionSetTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text" />

    <Button
        android:id="@+id/dialogAddQuestionSetButton"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogAddQuestionSetEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>