<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.MainMenuFragment">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        android:textColor="@color/new_on_background"
        android:textSize="60sp"
        android:layout_marginTop="60sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/main_menu_start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_start_button"
        android:layout_marginTop="120sp"

        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
        app:layout_constraintLeft_toLeftOf="@id/main_menu_set_manager_button"
        app:layout_constraintRight_toRightOf="@id/main_menu_set_manager_button"/>

    <Button
        android:id="@+id/main_menu_set_manager_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_set_manager_button"
        android:layout_marginTop="40sp"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_start_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_menu_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/settings"
        android:layout_margin="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>