<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/new_primary_variant">

    <TextView
        android:id="@+id/dialogFinishQuizTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/congratulations"
        android:textSize="18sp"
        android:textColor="@color/new_on_primary"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/dialogFinishQuizTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you_got_x_points"
        android:textSize="18sp"
        android:textColor="@color/new_on_primary"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/dialogFinishQuizTextView1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/dialogFinishQuizButtonReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/new_error"
        android:text="@string/go_back"
        android:textSize="12sp"
        android:textColor="@color/new_on_primary"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/dialogFinishQuizTextView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>