<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.EditQuestionSetFragment">

    <TextView
        android:id="@+id/editQuestionSetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:textColor="@color/new_on_background"
        android:text="@string/edit_question_set"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editQuestionSetEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"
        android:background="@color/new_primary"
        android:textColor="@color/new_on_primary"
        android:textSize="25sp"
        android:textAlignment="center"
        android:hint="@string/edit_name"
        android:autofillHints="CREATE NEW QUESTION SET"
        app:layout_constraintTop_toBottomOf="@id/editQuestionSetTextView"
        android:inputType="text"
        android:labelFor="@id/editQuestionSetEditText" />

    <Button
        android:id="@+id/editQuestionSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/edit"
        android:textColor="@color/new_on_primary"
        app:layout_constraintTop_toBottomOf="@id/editQuestionSetEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>